# mirakl_api_client

./: .gitignore  pyproject.toml  setup.py
mirakl_api_client/: __init__.py  client.py  resources.py
