[tool.poetry]
name = "mirakl-api-client"
version = "0.1.6"
description = ""
authors = ["Steven Athouel <sathouel@gmail.com>"]
readme = "README.md"
packages = [{include = "mirakl_api_client"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
